<resources>
    <string name="app_name">Busão GO</string>
    <string name="host_prefix">https://www.busaogo.ufc.br/BusTrackerAPI/index.php</string>
    <!--string name="host_prefix">http://santana.azurewebsites.net/BusTrackerSecureAPI/index.php</string-->
    <string name="settings">Configurações</string>
    <string name="select_route">Selecionar rota</string>
    <string name="about">Sobre</string>
    <string name="update">Atualizar</string>
    <string name="feedback">Pesquisa de Feedback</string>
    <string name="filterVisualization">Filtrar Visualização</string>
    <string name="back">Voltar</string>

    <!-- Botões e Navegação -->
    <string name="botao_ok">OK</string>

    <!-- Títulos e Descrições -->
    <string name="title_noroutes">Nenhuma rota para exibir</string>
    <string name="desc_noroutes">Não foi possível carregar as rotas ou não há rotas disponíveis.</string>

    <!-- Splash !-->
    <string name="aguarde">Aguarde, carregando informações...</string>

    <!-- Activity de Sobre !-->
    <string name="title_developers">Equipe de Desenvolvimento</string>
    <string name="developers">
        Abner Sousa Nascimento\nEloise de Carvalho Rodrigues\nFrancisco Thales Rocha Sousa\nIran
        Mesquita Braga Junior\nIsaac Ben Judá C. B. de Senna Dourado\nIsaac Newton Melo
        Machado\nLaercio Santana Rodrigues\nMagdiel Campelo Alves de Sousa\nNicollas Souza
        Batista\nNiltomar Rodrigues da Silva\nRaimundo Farrapo Pinto Júnior\nSyllas Rangel
        Carneiro Magalhães
    </string>

    <string name="title_tutors">Tutores</string>
    <string name="tutors">
        Luís Eduardo Araripe Gomes da Silva\nIális Cavalcante de Paula Júnior
    </string>

    <string name="site_projeto">Mais sobre o Projeto\n<a href="http://www.busaogo.ufc.br">www.busaogo.ufc.br</a></string>
    <string name="site_web_app">Web App\n<a href="https://www.busaogo.ufc.br/bus-tracker-web-client/">www.busaogo.ufc.br/bus-tracker-web-client/</a></string>
    <string name="site_pet"><a href="https://www.pet.ec.ufc.br">www.pet.ec.ufc.br</a></string>
    <string name="site_ufc_sobral"><a href="https://www.sobral.ufc.br/">www.sobral.ufc.br</a></string>
    <string name="site_ufc"><a href="https://www.ufc.br/">www.ufc.br</a></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Activity de Configurações !-->

    <string name="configurações">Configurações</string>
    <string name="text_update">Intervalo de Atualizações</string>
    <string name="descrição_update">Definir o intervalo entre as atualizações dos marcadores dos ônibus no mapa em segundos. Mantenha esse valor alto para economizar dados de sua rede móvel, ou um valor baixo para máxima precisão.</string>
    <string name="text_notification">Receber Notificações</string>
    <string name="descrição_noticação">Caso você decida não ser mais incomodado com as notificações do motorista do ônibus. Porém, você ainda poderá consultar as mensagens a partir da tela de Notificações</string>
    <string name="save_settings">Salvar Preferências</string>

    <!-- Shared Preferences !-->
    <string name="preferences">Configurações</string>
    <string name="update_time">Tempo de Intervalos</string>
    <string name="notifications">Notificações</string>
    <string name="token">Token</string>

    <!-- Token Firebase !-->
    <string name="firebase">Token Firebase</string>
    <string name="firebase_on">Firebase habilitado</string>

    <!-- Activitiy de Notificações !-->
    <string name="notification_list">Notificações</string>
    <string name="notification_data">Notificações Salvas</string>
    <string name="deletar_notifications">Deletar Notificações</string>
    <string name="notifications_empty">Nenhuma notificação.</string>

    <!-- Nome ônibus Clicado -->
    <string name="clicked_bus">Ônibus Clicado</string>

    <!-- Texto sobre distância do ônibus -->
    <string name="distance_bus">Encontra-se a ${distance}km de você!</string>

    <!-- Erros -->
    <string name="erro_servidor_offline_title">Sistema offline</string>
    <string name="erro_servidor_offline_msg">
        Desculpe, nosso sistema provavelmente está offline.
        Tente novamente mais tarde ou contate a equipe de desenvolvimento em
        www.pet.ec.ufc.br/contato.
    </string>

    <string name="erro_registro_aparelho_title">Erro de registro</string>
    <string name="erro_registro_aparelho_msg">
        Desculpe, não foi possível registrar seu aparelho no sistema.
        Tente novamente mais tarde ou contate a equipe de desenvolvimento em
        www.pet.ec.ufc.br/contato.
    </string>

    <string name="erro_aparelho_offline_title">Erro de conexão</string>
    <string name="erro_aparelho_offline_msg">
        Cheque sua conexão com a internet e tente novamente.
        Se ainda assim tiver problemas, contate a equipe de desenvolvimento em
        www.pet.ec.ufc.br/contato.
    </string>

    <string name="erro_botao_home_title">Erro de interface</string>
    <string name="erro_botao_home_msg">
        Reinstale o aplicativo e tente novamente.
        Se ainda tiver problemas, contate a equipe de desenvolvimento em
        www.pet.ec.ufc.br/contato
        informando: descrição de como ocorreu o erro e
        modelo do aparelho.
    </string>

    <string name="erro_indisponivel_title">Serviço indisponível</string>
    <string name="erro_indisponivel_msg">
        Serviço encontra-se indisponível no momento.
        Contate a equipe de desenvolvimento para mais detalhes.
    </string>

    <string name="erro_info_indisponivel_title">Informações indisponíveis</string>
    <string name="erro_info_indisponivel_msg">
        Não foi possível localizar informações sobre as rotas.
        Contate a equipe de desenvolvimento para mais detalhes.
    </string>

    <string name="erro_gps_title">GPS Desativado!</string>
    <string name="erro_gps_msg">
        Por favor, ative o GPS do seu aparelho para utilizar essa funcionalidade.
        Com ela, você poderá visualizar sua localização, e ter uma distância aproximada entre você
        e o ônibus.
    </string>
</resources>
