<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/notification_list"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="ifRoom"
        android:onClick="onClickNotifications"
        android:orderInCategory="100"/>
    <item android:title="GPS"
        android:icon="@drawable/ic_my_location"
        app:showAsAction="ifRoom"
        android:onClick="onClickGps"
        android:orderInCategory="400"/>
    <item android:title="@string/settings"
        android:onClick="onClickSettings"
        android:orderInCategory="200"/>
    <item android:title="@string/about"
        android:onClick="onClickAbout"
        android:orderInCategory="300"/>

</menu>