<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ufc.pet.bustracker.AboutActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.ActionBarOverlay" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/logo_pet_ufc"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/title_developers"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/developers"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/title_tutors"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/tutors"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/site_projeto"
                android:autoLink="web"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/site_web_app"
                android:autoLink="web"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/site_pet"
                android:autoLink="web"
                android:textSize="20sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/site_ufc_sobral"
                android:autoLink="web"
                android:textSize="20sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/site_ufc"
                android:autoLink="web"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
